--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -97,6 +97,11 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           GPG_FINGERPRINT: ${{ steps.import_gpg.outputs.fingerprint }}
+      - name: Upload builds as artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: builds
+          path: dist # default archive folder created by goreleaser
   publishToUbuntuPpa:
     runs-on: ubuntu-latest
     needs: goreleaser
@@ -104,7 +109,7 @@ jobs:
       - name: Download builds
         uses: actions/download-artifact@v1
         with:
-          name: gorelease-archive
+          name: builds
           path: app # build folder
       - name: Get the package name
         id: get_package_name
