--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -106,6 +106,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: goreleaser
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: Download builds
         uses: actions/download-artifact@v1
         with:
