--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -117,7 +117,7 @@ jobs:
           path: app # build folder
       - name: Get the package name
         id: get_package_name
-        run: echo ::set-output name=PACKAGE_NAME::${GITHUB_REPOSITORY#*/}-${GITHUB_REF/refs\/tags\//v}
+        run: echo ::set-output name=PACKAGE_NAME::${GITHUB_REPOSITORY#*/}-${GITHUB_REF/refs\/tags\/v/}
       - name: Publish builds to Ubuntu PPA
         uses: ./.github/actions/ubuntu-publish
         with:
@@ -133,4 +133,5 @@ jobs:
         env:
           GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
           GPG_PUBLIC_KEY: ${{ secrets.GPG_PUBLIC_KEY }}
-          GPG_OWNERTRUST: ${{ secrets.GPGP_OWNERTRUST }}
+          GPG_OWNERTRUST: ${{ secrets.GPG_OWNERTRUST }}
+          GPG_KEYID: ${{ secrets.GPG_KEYID }}
