fix: disable gpg signing in goreleaser for now

--- a/app/.goreleaser.yml
+++ b/app/.goreleaser.yml
@@ -80,7 +80,7 @@ release:
   draft: true
   prerelease: auto
   name_template: "{{.ProjectName}}-v{{.Version}} {{.Env.USER}}"
-signs:
-  - artifacts: checksum
+# signs:
+#   - artifacts: checksum
 # TODO: brew, snapcraft, snoop configs
 # TODO: Sign artifact and upload to ubuntu ppa
