--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -96,42 +96,43 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          FURY_TOKEN: ${{ secrets.FURY_PUSHTOKEN }}
           # GPG_FINGERPRINT: ${{ steps.import_gpg.outputs.fingerprint }}
       - name: Upload builds as artifacts
         uses: actions/upload-artifact@v2
         with:
           name: builds
           path: dist # default archive folder created by goreleaser
-  publishToUbuntuPpa:
-    runs-on: ubuntu-latest
-    needs: goreleaser
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - name: Download builds
-        uses: actions/download-artifact@v1
-        with:
-          name: builds
-          path: app # build folder
-      - name: Get the package name
-        id: get_package_name
-        run: echo ::set-output name=PACKAGE_NAME::${GITHUB_REPOSITORY#*/}-${GITHUB_REF/refs\/tags\/v/}
-      - name: Publish builds to Ubuntu PPA
-        uses: ./.github/actions/ubuntu-publish
-        with:
-          build-folder: ${{ steps.get_package_name.outputs.PACKAGE_NAME }}
-          artifact-path: app # build artifacts should be gzipped
-          package-name: ${{ steps.get_package_name.outputs.PACKAGE_NAME }}
-          email: principals@atomi.cloud # should this be our own email?
-          author: ${{ github.repository_owner }}
-          section: util
-          ci-project-url: https://github.com/${{github.repository}}
-          ci-repository-url: https://github.com/${{github.repository}}.git
-          target-ppa: mokjn/atomicloud
-        env:
-          GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
-          GPG_PUBLIC_KEY: ${{ secrets.GPG_PUBLIC_KEY }}
-          GPG_OWNERTRUST: ${{ secrets.GPG_OWNERTRUST }}
-          GPG_KEYID: ${{ secrets.GPG_KEYID }}
+  # publishToUbuntuPpa:
+  #   runs-on: ubuntu-latest
+  #   needs: goreleaser
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v2
+  #       with:
+  #         fetch-depth: 0
+  #     - name: Download builds
+  #       uses: actions/download-artifact@v1
+  #       with:
+  #         name: builds
+  #         path: app # build folder
+  #     - name: Get the package name
+  #       id: get_package_name
+  #       run: echo ::set-output name=PACKAGE_NAME::${GITHUB_REPOSITORY#*/}-${GITHUB_REF/refs\/tags\/v/}
+  #     - name: Publish builds to Ubuntu PPA
+  #       uses: ./.github/actions/ubuntu-publish
+  #       with:
+  #         build-folder: ${{ steps.get_package_name.outputs.PACKAGE_NAME }}
+  #         artifact-path: app # build artifacts should be gzipped
+  #         package-name: ${{ steps.get_package_name.outputs.PACKAGE_NAME }}
+  #         email: principals@atomi.cloud # should this be our own email?
+  #         author: ${{ github.repository_owner }}
+  #         section: util
+  #         ci-project-url: https://github.com/${{github.repository}}
+  #         ci-repository-url: https://github.com/${{github.repository}}.git
+  #         target-ppa: mokjn/atomicloud
+  #       env:
+  #         GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
+  #         GPG_PUBLIC_KEY: ${{ secrets.GPG_PUBLIC_KEY }}
+  #         GPG_OWNERTRUST: ${{ secrets.GPG_OWNERTRUST }}
+  #         GPG_KEYID: ${{ secrets.GPG_KEYID }}
