--- a/app/.goreleaser.yml
+++ b/app/.goreleaser.yml
@@ -80,6 +80,21 @@ release:
   draft: true
   prerelease: auto
   name_template: "{{.ProjectName}}-v{{.Version}} {{.Env.USER}}"
+# create deb packages
+nfpms:
+  - id: debian_packages
+    builds:
+      - cli
+      - app
+    formats:
+      - deb
+    file_name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
+publishers:
+  name: fury.io
+  ids:
+    - debian_packages
+  dir: "{{ dir .ArtifactPath }}"
+  cmd: curl -F package=@{{ .ArtifactName }} https://{{ .Env.FURY_TOKEN }}@push.fury.io/mokjunneng/
 # signs:
 #   - artifacts: checksum
 # TODO: brew, snapcraft, snoop configs
